2003-02-24  Mike Kestner  <mkestner@speakeasy.net>

	* generator/ObjectGen.cs : gen GLib.Value ctor, not uint
	* glib/Object.cs : use GLib.Type in RegisterGType and 
	  make the g_object_new ctor use GLib.Type.
	* glib/Type.cs : new thin wrapper for GValue type
	* glib/*.cs : s/Type/System.Type

2003-02-23  Mike Kestner  <mkestner@speakeasy.net>

	* generator/GenBase.cs : quote the custom filenames in 
	#file directives.

2003-02-23  Mike Kestner  <mkestner@speakeasy.net>

	* generator/CallbackGen.cs : suppress len params from
	  string/len pairs.
	* generator/Parameters.cs : begin the refactoring to use
	  Parameter class. Suppress len params from string/len pairs.
	*/*.custom : remove all overrides of string/len pairs
	*/*.cs : ditto.  Thanks to Alp Toker for the foundation
	  patch that this change was built upon.

2003-02-22  Mike Kestner  <mkestner@speakeasy.net>

	* sources/makefile : patch from Charles Krempeaux to add
	get-source-code target which wgets tarballs.

2003-02-21  Mike Kestner  <mkestner@speakeasy.net>

	* mapdllnames.pl : a little whitespace action
	* api/*-api.xml : move to win32 dllnames
	* */makefile.win32 : remove the mapdllnames step
	* */*.cs : move to win32 dllnames
	* */*.custom : move to win32 dllnames
	* sources/gtk-sharp.sources : move to win32 dllnames

2003-02-21  Mike Kestner  <mkestner@speakeasy.net>

	* api/*-api.xml : remove stray enum get_type methods.
	* parser/gapi2xml.pl : ignore get_type methods on enums.

2003-02-20  Mike Kestner  <mkestner@speakeasy.net>

	* api/gtk-api.xml : hide the Arrow::Set method.
	* sources/Gtk.metadata : metadata for above.

2003-02-19  Mike Kestner  <mkestner@speakeasy.net>

	* generator/Parameters.cs (Initialize): construct a GLib.Value
	for out params.

2003-02-19  Mike Kestner  <mkestner@speakeasy.net>

	* api/gtk-api.xml : mark TreeModel::GetValue value param out
	suggested by Lee Mallabone <gnome@phonicmonkey.net>
	* sources/Gtk.metadata : metadata for above