@@ -1,5 +1,9 @@
 2003-02-24  Mike Kestner  <mkestner@speakeasy.net>
 
+	* generator/Parameters.cs : fix some ref/out bugs
+
+2003-02-24  Mike Kestner  <mkestner@speakeasy.net>
+
 	* generator/ObjectGen.cs : gen GLib.Value ctor, not uint
 	* glib/Object.cs : use GLib.Type in RegisterGType and 
 	  make the g_object_new ctor use GLib.Type.
